<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddZekrScreen">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/addZekrHead"
        tools:viewBindingIgnore="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_48ssp"
        android:text="@string/add_zekr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout11"
        tools:viewBindingIgnore="true"
        app:layout_constraintTop_toBottomOf="@id/addZekrHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNewZekrName"
            android:hint="@string/enter_zekr_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout22"
        tools:viewBindingIgnore="true"
        app:layout_constraintTop_toBottomOf="@id/nameLayout11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterZekrTarget"
            android:hint="@string/enter_zekr_target"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveNow"
        android:text="@string/save_now"
        app:layout_constraintTop_toBottomOf="@id/nameLayout22"
        android:background="@drawable/btn_edit"
        android:layout_margin="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>